--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "antd": "^5.15.3",
     "material-symbols": "^0.17.0",
     "next": "13.5.6",
     "react": "^18",
