--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "material-symbols": "^0.17.0",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@types/node": "^20",
